--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>
                 <br><br><br><br>
                 <h1>David Vereș</h1>
-                <h3><a href="blog.html">English</a> | <a href="blog.html">Română</a></h3>
+                <h3><a href="blog.html">Română</a> | <a href="blog.html">English</a></h3>
             </p>
     </div>
 
