--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>New</title>
+    <title>David Vereș</title>
     <style type="text/css">
     html, body {
         height: 100%;
