--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
-<body>
-    
+<body style="background-color: #e0e0e0;">
     <div class="col-md-5" style="padding-top: 5%; padding-left: 5%;">
         <p>Hopa, că făcu serveru' o bubă... 
             <br>aci nu e nimic... 
@@ -36,6 +35,5 @@
             <br><code>the cake is a LIE!;</code>
         </p>
     </div>
-    
 </body>
 </html>
