--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
             <br>Ia încearcă, poate găsești ceva ce să te intereseze
         </p>
     </div>
-    <div class="col-md-2" align="center" style="padding-top: 5%;"><h4>Eroare</h4><br><font size=90>404</font><br><h4>Error</h4></div>
+    <div class="col-md-2" align="center" style="padding-top: 5%;"><h4>Eroare</h4><font size=90> 404 </font><h4>Error</h4></div>
     <div class="col-md-5" style="padding-top: 5%; padding-right: 5%" align="right">
         <p>Well, it looks like the server made a booboo...
             <br>don´t worry, a team of highly trained monkies was not sent to solve it, 
