--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <div class="container-fluid" style="height: 100%; background: #e0e0e0;" align="center">
             <p style="padding-top: 20px">
-                <img src="img/logo-1.jpg" class="img-circle" width="230" height="230">
+                <img src="img/logo-1.jpg" class="img-rounded" width="230" height="230">
                 <h1>David Vereș</h1>
-                <h3><a href="blog.html">English</a> | <a href="blog.html">Română</a></h3>
+                <h3><a href="blog.html">Română</a> | <a href="blog.html">English</a></h3>
             </p>
     </div>
 </body>
