--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><b>DAVID<font style="color:#e0e0e0">|</font>VEREȘ</b></a>
+                <a href="index.html" class="navbar-brand"><b>DAVID VEREȘ</b></a>
             </div>
             
             <!-- Menu Items -->
