--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><b>DAVID<font style="color:#e0e0e0">|</font>VEREȘ</b></a>
+                <a href="index.html" class="navbar-brand"><b>DAVID VEREȘ</b></a>
             </div>
             
             <!-- Menu Items -->
@@ -69,7 +69,7 @@
         <div class="col-md-5">
             <p><h3><small>În timpul zilei mă ocup cu achiziția de materiale, negocierea de contracte și alte lucruri de oameni mari dar în timpul meu liber îmi place fizica, astronomia (nu, nu astrologia!), fotografia și aviația (serios, uite o poză cu mine în avion!).</small></h3> 
             <br>
-            <h3><small>Un alt lucru care îmi place e să învăț și să explic mai departe ceea ce am înțeles. De aceea am pornit binedestiut.com un proiect încă în e scutece dar care cred că va crește mare.</small></h3>
+            <h3><small>Un alt lucru care îmi place e să învăț și să explic mai departe ceea ce am înțeles. De aceea am pornit <a href="binedestiut.com">binedestiut.com</a> un proiect încă în scutece dar care cred că va crește mare.</small></h3>
             <br>
             <h3><small>Dacă te pasionează să înțelegi cum și de ce funcționează lucrurile, cum să folosești tot felul de unelte pentru a-ți eficientiza munca și îți place și o glumă bună din când în când te aștept din nou pe <a href="davidveres.ro">davidveres.ro</a> sau <a href="binedestiut.com">binedestiut.com</a></small></h3>
             </p>
