--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
                     <li><a href="blog.html">Blog</a></li>
-                    <li class="active"><a href="about.html">About</a></li>
+                    <li class="active"><a href="about.html">Despre</a></li>
                     <li><a href="cv.html">CV</a></li>
                 </ul>
                 
