--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="blog.html">Blog</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html">Despre</a></li>
                     <li><a href="cv.html">CV</a></li>
                 </ul>
                 
