--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p style="padding-top: 30px">
                 <img src="img/logo-1.jpg" class="img-circle" width="230" height="230">
                 <h1>David Vereș</h1>
-                <h3><a href="blog.html">Română</a> | <a href="blog.html">English</a></h3>
+                <h3><a href="blog.html">Română</a> | <a href="blog-en.html">English</a></h3>
             </p>
     </div>
 </body>
