--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
                 
                 <!-- right side navbar -->
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><b>en | ro</b></a></li> 
+                    <li><a href="blog-en.html"><b>en | ro</b></a></li> 
                 </ul>
             </div>
             
