--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         </div>
     <hr>
         <div class="col-md-1"></div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 20px">
             <img src="img/avion.jpg" class="img-rounded" width="320" height="230">
         </div>
         <div class="col-md-1"></div>
