--- a/about-en.html
+++ b/about-en.html
@@ -31,9 +31,9 @@
             <!-- Menu Items -->
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
-                    <li><a href="blog.html">Blog</a></li>
-                    <li class="active"><a href="about.html">About</a></li>
-                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="blog-en.html">Blog</a></li>
+                    <li class="active"><a href="about-en.html">About</a></li>
+                    <li><a href="cv-en.html">CV</a></li>
                 </ul>
                 
                 <!-- right side navbar -->
