--- a/cv-en.html
+++ b/cv-en.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
                     <li><a href="blog-en.html">Blog</a></li>
-                    <li><a href="about-en.html">Despre</a></li>
+                    <li><a href="about-en.html">About</a></li>
                     <li class="active"><a href="cv-en.html">CV</a></li>
                 </ul>
                 
