--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Merlin HTML/CSS template">
     <meta name="author" content="Hasan Alibegic">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Merlin</title>
+    <title>David Vereș</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.6.0/venobox.css" async defer>
@@ -28,9 +28,9 @@
         <div class="content cover text-center">
           <div class="row">
             <div class="col-lg-12">
-              <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300">We Are Merlin</h1>
-              <a class="btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>
-              <h3 class="animated hiding" data-animation="fadeIn" data-delay="600">We Have Made A Lot Of Friends.</h3>
+              <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300">Hello</h1>
+              <!-- <a class="btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a> -->
+              <h3 class="animated hiding" data-animation="fadeIn" data-delay="600">I am David Vereș</h3>
             </div>
           </div>
         </div>
@@ -54,16 +54,16 @@
                 <a href="#home">Home</a>
               </li>
               <li>
-                <a href="#services">Services</a>
+                <a href="#about">About me</a>
               </li>
               <li>
-                <a href="#work">Work</a>
+                <a href="#work">Work experience</a>
               </li>
-              <li>
-                <a href="#clients">Clients</a>
+               <li>
+                <a href="#studies">Studies</a>
               </li>
-              <li>
-                <a href="#about">About</a>
+			  <li>
+                <a href="#hobbies">Hobbies</a>
               </li>
               <li>
                 <a href="#contact">Contact</a>
@@ -73,7 +73,7 @@
         </div>
       </nav>
     </div>
-    <section id="services" class="page">
+    <section id="about" class="page">
       <div class="container">
         <div class="content text-center">
           <div class="heading">
@@ -198,7 +198,7 @@
         </div>
       </div>
     </section>
-    <section id="clients" class="page">
+    <section id="hobbies" class="page">
       <div class="container">
         <div class="content text-center">
           <div class="row">
@@ -236,7 +236,7 @@
         </div>
       </div>
     </section>
-    <section id="about" class="page">
+    <section id="studies" class="page">
       <div class="container">
         <div class="content text-center">
           <div class="heading">
