--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
           <div class="heading">
             <h2>Who am I?</h2>
             <div class="border"></div>
-            <p>I'm a <span id="age">35</span> years old Buyer from Oradea, Romania.</p>
+            <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, photography, physics and astronomy among others.<br> I'm also interested in</p>
           </div>
+		  <!--
           <div class="row">
             <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="300">
               <i class="fa fa-globe fa-5x"></i>
@@ -97,6 +98,7 @@
               <h3><a href="#">Mobile Development</a></h3>
               <p>Aliquam aliquet, est a ullamcorper condimentum, tellus nulla fringilla elit, a iaculis nulla turpis sed wisi. Fusce volutpat. Etiam sodales ante id nunc. Proin ornare dignissim lacus.</p>
             </div>
+			-->
           </div>
         </div>
       </div>
