--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="heading">
             <h2>Who am I?</h2>
             <div class="border"></div>
-            <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, photography, physics and astronomy among others.<br> I'm also interested in</p>
+            <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
           </div>
 		  <!--
           <div class="row">
@@ -107,9 +107,9 @@
       <div class="container">
         <div class="content text-center">
           <div class="heading">
-            <h2>This is how we do it.</h2>
+            <h2>What do I do.</h2>
             <div class="border"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
+            <p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
           </div>
           <div class="row">
             <div class="col-md-12">
