--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             <div class="border"></div>
             <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
           </div>
+		  <div class="heading">
+            <h2>What do I do.</h2>
+            <div class="border"></div>
+            <p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
+          </div>
 		  <!--
           <div class="row">
             <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="300">
@@ -106,26 +111,22 @@
     <section id="work" class="page">
       <div class="container">
         <div class="content text-center">
-          <div class="heading">
-            <h2>What do I do.</h2>
-            <div class="border"></div>
-            <p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
-          </div>
+          
           <div class="row">
             <div class="col-md-12">
               <div id="portfolio">
                 <ul class="filters list-inline">
                   <li>
-                    <a class="active" data-filter="*" href="#">All</a>
+                    <a class="active" data-filter="*" href="#">My Hobbies</a>
                   </li>
                   <li>
                     <a data-filter=".photography" href="#">Photography</a>
                   </li>
                   <li>
-                    <a data-filter=".branding" href="#">Branding</a>
+                    <a data-filter=".branding" href="#">Aviation</a>
                   </li>
                   <li>
-                    <a data-filter=".web" href="#">Web</a>
+                    <a data-filter=".web" href="#">Physics and Astronomy</a>
                   </li>
                 </ul>
                 <ul class="items list-unstyled clearfix animated hiding" data-animation="fadeInRight">
