--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="item active">
-                    <p class="quote">Quisque convallis diam ligula, ac accumsan eros pretium vel. Curabitur convallis nibh sit amet iaculis ornare. Integer blandit quis diam sed tincidunt.</p>
+                    <p class="quote">Quisque diam ligula, ac accumsan eros pretium vel. Curabitur convallis nibh sit amet iaculis ornare. Integer blandit quis diam sed tincidunt.</p>
                     <p class="client">John Doe / CEO</p>
                   </div>
                   <div class="item">
