--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p class="client">Jorginho Jian / Developer</p>
                   </div>
                   <div class="item">
-                    <p class="quote">Curabitur in nulla et lorem varius convallis. Morbi bibendum purus at leo laoreet, vel ultricies orci viverra. Duis quis accumsan urna. Nulla faucibus mauris elit, vitae tristique nisi sollicitudin ut.</p>
+                    <p class="quote">Curabitur in nulla et lorem varius convallis. Morbi bibendum  at leo laoreet, vel ultricies orci viverra. Duis quis accumsan urna. Nulla faucibus mauris elit, vitae tristique nisi sollicitudin ut.</p>
                     <p class="client">Gandalf Kadir / Web Designer</p>
                   </div>
                   <div class="item">
