--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         <div class="content text-center">
           <div class="row">
 			<div class="heading">
-            <h2>What do I do?</h2>
+            <h2>What have I done before?</h2>
+			<div class="border"></div>
 			</div>
             <div class="col-lg-12 animated hiding" data-animation="fadeInDown">
               <div id="testimonials" class="carousel slide">
@@ -125,12 +126,12 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="item active">
-                    <p class="quote">Quisque diam ligula, ac accumsan eros pretium vel. Curabitur convallis nibh sit amet iaculis ornare. Integer blandit quis diam sed tincidunt.</p>
-                    <p class="client">John Doe / CEO</p>
+                    <p class="quote">Passive components Buyer - <i>I know resistors, capacitors, relay's and crystals</i></p>
+                    <p class="client">2013-2015 / Connect Group România</p>
                   </div>
                   <div class="item">
-                    <p class="quote">Vestibulum volutpat accumsan sem non eleifend. Vivamus pretium nisi semper sapien eleifend, vel lacinia lacus sodales. Morbi bibendum purus at leo laoreet, vel ultricies orci viverra.</p>
-                    <p class="client">Jorginho Jian / Developer</p>
+                    <p class="quote">Project Buyer - <i>I learned them all, PCB's, IC's, tranzistors and the rest</i></p>
+                    <p class="client">2015-2016 / Connect Group România</p>
                   </div>
                   <div class="item">
                     <p class="quote">Curabitur in nulla et lorem varius convalli s. Morbi bibendum  at leo laoreet, vel ultricies orci viverra. Duis quis accumsan urna. Nulla faucibus mauris elit, vitae tristique nisi sollicitudin ut.</p>
