--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="item active">
-                    <p class="quote">Passive components Buyer - <i>I know resistors, capacitors, relay's and crystals</i></p>
-                    <p class="client">2013-2015 / Connect Group România</p>
-                  </div>
-                  <div class="item">
                     <p class="quote">Project Buyer - <i>I learned them all, PCB's, IC's, tranzistors and the rest</i></p>
                     <p class="client">2015-2016 / Connect Group România</p>
                   </div>
                   <div class="item">
-                    <p class="quote">Curabitur in nulla et lorem varius convalli s. Morbi bibendum  at leo laoreet, vel ultricies orci viverra. Duis quis accumsan urna. Nulla faucibus mauris elit, vitae tristique nisi sollicitudin ut.</p>
-                    <p class="client">Gandalf Kadir / Web Designer</p>
+				    <p class="quote">Passive components Buyer - <i>I know resistors, capacitors, relay's and crystals</i></p>
+                    <p class="client">2013-2015 / Connect Group România</p>                  
                   </div>
                   <div class="item">
-                    <p class="quote">Nullam vel tempor quam, id dictum eros. Nam augue sem, aliquam ac mauris in, pharetra convallis quam. Nulla faucibus mauris elit, vitae tristique nisi sollicitudin ut. Vivamus pretium nisi semper sapien eleifend.</p>
-                    <p class="client">Homeros Yehudi / QA Engineer</p>
+                    <p class="quote">Chemical Warehouse Coordinator - <i>Ask me about Solder Paste or Label Removers :)</i></p>
+                    <p class="client">2007-2013 / Celestica România</p>
+                  </div>
+                  <div class="item">
+                    <p class="quote">Wh SAP Operator - <i> Now, if I only could remember where I put it...</p>
+                    <p class="client">2005-2007 / Celestica România</p>
                   </div>
                 </div>
                 <a class="left carousel-control" data-slide="prev" href="#testimonials">&lsaquo;</a>
