--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="border"></div>
             <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
           </div>
-		  <div class="heading">
+		  <div class="heading"><br>
             <h2>What do I do?</h2>
             <div class="border"></div>
             <p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
@@ -138,7 +138,7 @@
                     <p class="client">2007-2013 / Celestica România</p>
                   </div>
                   <div class="item">
-                    <p class="quote">Wh SAP Operator - <i> Now, if I only could remember where I put it...</p>
+                    <p class="quote">Wh SAP Operator - <i> Now, if I could only remember where I put it...</p>
                     <p class="client">2005-2007 / Celestica România</p>
                   </div>
                 </div>
