--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <p class="client">2007-2013 / Celestica România</p>
                   </div>
                   <div class="item">
-                    <p class="quote">Wh SAP Operator - <i> Now, if I could only remember where I put it...</p>
+                    <p class="quote">Wh SAP Operator - <i> Now, if I could only remember where I put it...</i></p>
                     <p class="client">2005-2007 / Celestica România</p>
                   </div>
                 </div>
@@ -151,7 +151,7 @@
       </div>
     </section>
     <section id="hobbies" class="page">
-            <div class="container">
+      <div class="container">
         <div class="content text-center"> 
           <div class="row">
             <div class="col-md-12">
