--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </ul>
                 <ul class="items list-unstyled clearfix animated hiding" data-animation="fadeInRight">
                   <li class="item branding">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
+                    <a href="img/work/1.jpg" data-gall="gall-frame" data-type="ajax">
                       <img src="img/work/1.jpg" alt="">
                       <div class="overlay">
                         <span>Etiam porta</span>
