--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="content cover text-center">
           <div class="row">
             <div class="col-lg-12">
-              <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300"><big>Hello</big></h1>
+              <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300"><big><big><big>Hello</big></big></big></h1>
               <!-- <a class="btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a> -->
-              <h3 class="animated hiding" data-animation="fadeIn" data-delay="600">I am David Vereș</h3>
+              <h3 class="animated hiding" data-animation="fadeIn" data-delay="600"><big><big>I am David Vereș</big></big></h3>
             </div>
           </div>
         </div>
