--- a/index.html
+++ b/index.html
@@ -77,33 +77,17 @@
       <div class="container">
         <div class="content text-center">
           <div class="heading">
+		  <div class="col-lg-12 animated hiding" data-animation="fadeInDown">
             <h2>Who am I?</h2>
             <div class="border"></div>
             <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
           </div>
+		  </div>
 		  <div class="heading"><br>
             <h2>What do I do?</h2>
             <div class="border"></div>
             <p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
           </div>
-		  <!--
-          <div class="row">
-            <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="300">
-              <i class="fa fa-globe fa-5x"></i>
-              <h3><a href="#">Web Design</a></h3>
-              <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            </div>
-            <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="600">
-              <i class="fa fa-cloud fa-5x"></i>
-              <h3><a href="#">Web Development</a></h3>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-            </div>
-            <div class="col-lg-4 service animated hiding" data-animation="fadeInUp" data-delay="900">
-              <i class="fa fa-mobile fa-5x"></i>
-              <h3><a href="#">Mobile Development</a></h3>
-              <p>Aliquam aliquet, est a ullamcorper condimentum, tellus nulla fringilla elit, a iaculis nulla turpis sed wisi. Fusce volutpat. Etiam sodales ante id nunc. Proin ornare dignissim lacus.</p>
-            </div>
-			-->
           </div>
         </div>
       </div>
