--- a/index.html
+++ b/index.html
@@ -77,17 +77,22 @@
       <div class="container">
         <div class="content text-center">
           <div class="heading">
-		  <div class="col-lg-12 animated hiding" data-animation="fadeInDown">
             <h2>Who am I?</h2>
             <div class="border"></div>
             <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
           </div>
-		  </div>
+        </div>
+      </div>
+    </section>
+	<section id="about" class="page">
+      <div class="container">
+        <div class="content text-center">
 		  <div class="heading"><br>
-            <h2>What do I do?</h2>
-            <div class="border"></div>
-            <p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
-          </div>
+			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
+				<h2>What do I do?</h2>
+				<div class="border"></div>
+				<p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
+			</div>
           </div>
         </div>
       </div>
