--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
       <div class="container">
         <div class="content text-center">
           <div class="heading">
-            <h2>Who am I?</h2>
-            <div class="border"></div>
-            <p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
+			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
+				<h2>Who am I?</h2>
+				<div class="border"></div>
+				<p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
+			</div>
           </div>
         </div>
       </div>
