--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a href="#work">Work experience</a>
               </li>
                <li>
-                <a href="#studies">Studies</a>
+                <a href="#photo">Photography</a>
               </li>
 			  <li>
                 <a href="#hobbies">Hobbies</a>
@@ -142,26 +142,12 @@
         </div>
       </div>
     </section>
-    <section id="hobbies" class="page">
+    <section id="photo" class="page">
       <div class="container">
         <div class="content text-center"> 
           <div class="row">
             <div class="col-md-12">
               <div id="portfolio">
-                <ul class="filters list-inline">
-                  <li>
-                    <a class="active" data-filter="*" href="#">My Hobbies</a>
-                  </li>
-                  <li>
-                    <a data-filter=".photography" href="#">Photography</a>
-                  </li>
-                  <li>
-                    <a data-filter=".branding" href="#">Aviation</a>
-                  </li>
-                  <li>
-                    <a data-filter=".web" href="#">Physics and Astronomy</a>
-                  </li>
-                </ul>
                 <ul class="items list-unstyled clearfix animated hiding" data-animation="fadeInRight">
                   <li class="item branding">
                     <a href="img/work/1.jpg" data-gall="gall-frame" data-type="ajax">
