--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" async defer>
     <link rel="stylesheet" href="css/style.css" async defer>
+	<link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -29,7 +30,6 @@
           <div class="row">
             <div class="col-lg-12">
               <h1 class="animated hiding" data-animation="fadeInDown" data-delay="300"><big><big><big>Hello</big></big></big></h1>
-              <!-- <a class="btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a> -->
               <h3 class="animated hiding" data-animation="fadeIn" data-delay="600"><big><big>I am David Vereș</big></big></h3>
             </div>
           </div>
@@ -59,11 +59,11 @@
               <li>
                 <a href="#work">Work experience</a>
               </li>
-               <li>
-                <a href="#photo">Photography</a>
-              </li>
 			  <li>
                 <a href="#hobbies">Hobbies</a>
+              </li>
+               <li>
+                <a href="#photo">Photography</a>
               </li>
               <li>
                 <a href="#contact">Contact</a>
@@ -142,94 +142,24 @@
         </div>
       </div>
     </section>
-    <section id="photo" class="page">
-      <div class="container">
-        <div class="content text-center"> 
-          <div class="row">
-            <div class="col-md-12">
-              <div id="portfolio">
-                <ul class="items list-unstyled clearfix animated hiding" data-animation="fadeInRight">
-                  <li class="item branding">
-                    <a href="img/work/1.jpg" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/1.jpg" alt="">
-                      <div class="overlay">
-                        <span>Etiam porta</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/2.jpg" alt="">
-                      <div class="overlay">
-                        <span>Lorem ipsum</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item branding">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/3.jpg" alt="">
-                      <div class="overlay">
-                        <span>Vivamus quis</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/4.jpg" alt="">
-                      <div class="overlay">
-                        <span>Donec ac tellus</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/5.jpg" alt="">
-                      <div class="overlay">
-                        <span>Etiam volutpat</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item web">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/6.jpg" alt="">
-                      <div class="overlay">
-                        <span>Donec congue </span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/7.jpg" alt="">
-                      <div class="overlay">
-                        <span>Nullam a ullamcorper diam</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item web">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/8.jpg" alt="">
-                      <div class="overlay">
-                        <span>Etiam consequat</span>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-	  
-	  
-	
-    </section>
-    <section id="studies" class="page">
+	<section id="hobbies" class="page">
+	<br>
+		<div id="testimonials" class="carousel slide">
+				<div class="item">
+					<p class="quote"><h2><b>Once you have tasted flight, you will forever walk the earth with your eyes turned skyward, <br> for there you have been, and there you will always long to return.</b></h2></p>
+					<p class="client"><h5>Leonardo da Vinci</h5></p>
+				</div>
+		</div>
+	<br>
+	</section>
+	<section id="studies" class="page">
       <div class="container">
         <div class="content text-center">
           <div class="heading">
-            <h2>About Us.</h2>
+            <h2>My main interests.</h2>
             <div class="border"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor.</p>
+            <p>These are some of my main interests. I'm not claiming I know anything about any of them but they make me turn my head when I hear about them.</p>
+			<br>
           </div>
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">
@@ -237,10 +167,10 @@
                 <img class="img-responsive" src="img/team/1.jpg" alt="">
               </div>
               <div class="bio">
-                <h4>John Doe</h4>
-                <h5>Web Developer</h5>
+                <h4>Physics</h4>
+                <h5>makes things tick</h5>
                 <div class="border"></div>
-                <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                I'm always amazed to understand how things work, what's behind and beneath anything you can imagine
                 <ul class="list-inline">
                   <li>
                     <a href="http://www.facebook.com" title="Facebook">
@@ -270,10 +200,10 @@
                 <img class="img-responsive" src="img/team/2.jpg" alt="">
               </div>
               <div class="bio">
-                <h4>Clarinda Gratia</h4>
-                <h5>Designer</h5>
+                <h4>Aviation</h4>
+                <h5>Up, up and away!</h5>
                 <div class="border"></div>
-                <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                <p>Nothing puts a smile on my face like the chance to go play between clouds</p>
                 <ul class="list-inline">
                   <li>
                     <a href="http://www.dribbble.com" title="Dribbble">
@@ -298,10 +228,10 @@
                 <img class="img-responsive" src="img/team/3.jpg" alt="">
               </div>
               <div class="bio">
-                <h4>Mandeep Eimear</h4>
-                <h5>Mobile Developer</h5>
+                <h4>Photography</h4>
+                <h5>Canon or Nikon?</h5>
                 <div class="border"></div>
-                <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                <p>A picture is worth a thousand words... if you make it right!</p>
                 <ul class="list-inline">
                   <li>
                     <a href="http://www.twitter.com" title="Twitter">
@@ -326,10 +256,10 @@
                 <img class="img-responsive" src="img/team/4.jpg" alt="">
               </div>
               <div class="bio">
-                <h4>Wigstan Fergus</h4>
-                <h5>QA Engineer</h5>
+                <h4>Astronomy</h4>
+                <h5>We are all made of stars</h5>
                 <div class="border"></div>
-                <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                <p>It is far better to grasp the universe as it really is than to persist in delusion, however satisfying and reassuring <br> <i>Carl Sagan</i></p>
                 <ul class="list-inline">
                   <li>
                     <a href="http://www.plus.google.com" title="Google+">
@@ -353,26 +283,56 @@
         </div>
       </div>
     </section>
+    <section id="photo" class="page">
+		  <h4>My Photos</h4>
+          <div class="border"></div>
+		  <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+			<div class="slides"></div>
+			<h3 class="title"></h3>
+			<a class="prev">‹</a>
+			<a class="next">›</a>
+			<a class="play-pause"></a>
+			<ol class="indicator"></ol>
+		  </div>
+		 <div id="links" align="center">
+			<a href="img/work/1.jpg">
+				<img src="img/work/1.jpg" style="width:64px;height:48px;">
+			</a>
+			<a href="img/work/2.jpg">
+				<img src="img/work/2.jpg" style="width:64px;height:48px;">
+			</a>
+			<a href="img/work/3.jpg">
+				<img src="img/work/3.jpg" style="width:64px;height:48px;">
+			</a>
+			<a href="img/work/4.jpg">
+				<img src="img/work/4.jpg" style="width:64px;height:48px;">
+			</a>
+			<a href="img/work/5.jpg">
+				<img src="img/work/5.jpg" style="width:64px;height:48px;">
+			</a>
+		</div> 
+    </section>
+    <div class="space"></div>
     <section id="contact" class="page">
       <div class="container">
         <div class="content cover text-center">
           <div class="heading">
             <h2>Getting in touch.</h2>
             <div class="border"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>Pick your poison!</p>
           </div>
           <div class="row">
             <div class="col-lg-4 animated hiding" data-animation="fadeInRight" data-delay="600">
               <i class="fa fa-map-marker fa-3x"></i>
-              <a href="#">Mostar, Bosnia and Herzegovina</a>
+              <a href="https://www.tripadvisor.com/Tourism-g304061-Oradea_Bihor_County_Northwest_Romania_Transylvania-Vacations.html" target="_blank">Oradea, Bihor, România</a>
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInDown" data-delay="300">
               <i class="fa fa-phone fa-3x"></i>
-              <a href="tel:9876543210">(987) 654-3210</a>
+              <a href="tel:0040876889">(0740)876.889</a>
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
               <i class="fa fa-envelope fa-3x"></i>
-              <a href="mailto:john.doe@mail.com">john.doe@mail.com</a>
+              <a href="mailto:dave460@gmail.com">e-mail me</a>
             </div>
           </div>
         </div>
@@ -382,35 +342,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 animated hiding" data-animation="fadeInUp">
-            <ul class="social list-inline ">
-              <li>
-                <a class="facebook" href="http://www.facebook.com" title="Facebook">
-                  <i class="fa fa-facebook fa-2x"></i>
-                </a>
-              </li>
-              <li>
-                <a class="twitter" href="http://www.twitter.com" title="Twitter">
-                  <i class="fa fa-twitter fa-2x"></i>
-                </a>
-              </li>
-              <li>
-                <a class="google-plus" href="http://www.plus.google.com" title="Google+">
-                  <i class="fa fa-google-plus fa-2x"></i>
-                </a>
-              </li>
-              <li>
-                <a class="dribbble" href="http://www.linkedin.com" title="Dribbble">
-                  <i class="fa fa-dribbble fa-2x"></i>
-                </a>
-              </li>
-            </ul>
             <p class="copyright">
-              Created by <a href="http://www.twitter.com/halibegic">@halibegic</a> &middot;
-              Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a> &middot;
+              Copyright &copy; 2016 Veres David-Gheorghe &middot;
+			  Based on <a href="http://www.twitter.com/halibegic">@halibegic</a>'s <a href="http://www.github.com/halibegic/merlin">Merlin</a> theme &middot;
               Based on <a href="http://getbootstrap.com/">Bootstrap</a>  &middot;
               Icons by <a href="http://fontawesome.io/">Font Awesome</a> &middot;
-              <a href="http://www.github.com/halibegic/merlin">GitHub</a> &middot;
-              <a href="http://steamcommunity.com/id/halibegic">Buy Me a Game</a>
             </p>
           </div>
         </div>
@@ -425,6 +361,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.appear/0.3.3/jquery.appear.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.6.0/venobox.min.js"></script>
     <script src="js/script.js"></script>
+	<script src="js/blueimp-gallery.min.js"></script>
     <!-- Google Analytics: change UA-25089888-9 to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -432,7 +369,7 @@
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-25089888-9');ga('send','pageview');
+      ga('create','');ga('send','pageview');
     </script>
 	<script type="text/javascript">
 	var birth = new Date('1981-09-20');
@@ -443,6 +380,25 @@
 
 	var span = document.getElementById('age');
 	span.innerHTML = age;
+	</script>
+	<!--<script>
+	document.getElementById('links').onclick = function (event) {
+    event = event || window.event;
+    var target = event.target || event.srcElement,
+        link = target.src ? target.parentNode : target,
+        options = {index: link, event: event},
+        links = this.getElementsByTagName('a');
+    blueimp.Gallery(links, options);
+	};
+	</script> -->
+	<script>
+		blueimp.Gallery(
+			document.getElementById('links').getElementsByTagName('a'),
+			{
+				container: '#blueimp-gallery-carousel',
+				carousel: true
+			}
+		);
 	</script>
   </body>
 </html>
