--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
 			<a href="img/work/4.jpg">
 				<img src="img/work/4.jpg" style="width:64px;height:48px;">
 			</a>
-			<a href="img/work/5.jpg">
+			<!--<a href="img/work/5.jpg">
 				<img src="img/work/5.jpg" style="width:64px;height:48px;">
-			</a>
+			</a>-->
 		</div> 
     </section>
     <div class="space"></div>
