--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       </div>
     </section>
     <section id="photo" class="page">
-		  <h4>My Photos</h4>
+	    <div class="page" align="center"><h4>My Photos</h4></div>
           <div class="border"></div>
 		  <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
 			<div class="slides"></div>
