--- a/index.html
+++ b/index.html
@@ -284,7 +284,11 @@
       </div>
     </section>
     <section id="photo" class="page">
-	    <div class="page" align="center"><h4>My Photos</h4></div>
+	    <div class="heading">
+			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
+				My Photos
+		    </div>
+	    </div>
           <div class="border"></div>
 		  <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
 			<div class="slides"></div>
