--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
       </div>
     </section>
-	<section id="hobbies" class="page">
+<section id="studies" class="page">
 	<br>
 	<div id="testimonials" class="carousel slide">
 		<div class="item">
@@ -152,7 +152,7 @@
 	</div>
 	<br>
 	</section>
-	<section id="studies" class="page">
+<section id="hobbies" class="page">
       <div class="container">
         <div class="content text-center">
           <div class="heading">
@@ -284,10 +284,8 @@
       </div>
     </section>
     <section id="photo" class="page">
-		<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
-				My Photos
-	    </div>
-          <div class="border"></div>
+	<div align="center"><h4>My Photos</h4></div>
+        <div class="border"></div>
 		  <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
 			<div class="slides"></div>
 			<h3 class="title"></h3>
