--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
 		<div class="item">
 			<p class="quote"><h2><b>Once you have tasted flight, you will forever walk the earth with your eyes turned skyward, <br> for there you have been, and there you will always long to return.</b></h2></p>
 			<p class="client"><h5>Leonardo da Vinci</h5></p>
+		</div>
+	</div>
 	<br>
 </section>
 <section id="hobbies" class="page">
