--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4 animated hiding" data-animation="fadeInRight" data-delay="600">
-              <i class="fa fa-map-marker fa-3x"></i>
+              <a href="https://www.tripadvisor.com/Tourism-g304061-Oradea_Bihor_County_Northwest_Romania_Transylvania-Vacations.html" target="_blank"><i class="fa fa-map-marker fa-3x"><br></i></a>
               <a href="https://www.tripadvisor.com/Tourism-g304061-Oradea_Bihor_County_Northwest_Romania_Transylvania-Vacations.html" target="_blank">Oradea, Bihor, România</a>
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInDown" data-delay="300">
@@ -331,7 +331,7 @@
               <a href="tel:0040876889">(0740)876.889</a>
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
-              <i class="fa fa-envelope fa-3x"></i>
+              <a href="mailto:dave460@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
               <a href="mailto:dave460@gmail.com">e-mail me</a>
             </div>
           </div>
@@ -347,6 +347,7 @@
 			  Based on <a href="http://www.twitter.com/halibegic">@halibegic</a>'s <a href="http://www.github.com/halibegic/merlin">Merlin</a> theme &middot;
               Based on <a href="http://getbootstrap.com/">Bootstrap</a>  &middot;
               Icons by <a href="http://fontawesome.io/">Font Awesome</a> &middot;
+			  <img src="img/tardis.png" width=30px align="right" style="opacity:0.4;filter:alpha(opacity=40);">
             </p>
           </div>
         </div>
