--- a/index.html
+++ b/index.html
@@ -171,28 +171,6 @@
                 <h5>makes things tick</h5>
                 <div class="border"></div>
                 I'm always amazed to understand how things work, what's behind and beneath anything you can imagine
-                <ul class="list-inline">
-                  <li>
-                    <a href="http://www.facebook.com" title="Facebook">
-                      <i class="fa fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="http://www.twitter.com" title="Twitter">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="http://www.linkedin.com" title="LinkedIn">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="http://www.github.com" title="GitHub">
-                      <i class="fa fa-github"></i>
-                    </a>
-                  </li>
-                </ul>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
@@ -204,23 +182,6 @@
                 <h5>Up, up and away!</h5>
                 <div class="border"></div>
                 <p>Nothing puts a smile on my face like the chance to go play between clouds</p>
-                <ul class="list-inline">
-                  <li>
-                    <a href="http://www.dribbble.com" title="Dribbble">
-                      <i class="fa fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="http://www.pinterest.com" title="Pinterest">
-                      <i class="fa fa-pinterest"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="http://www.instagram.com" title="Instagram">
-                      <i class="fa fa-instagram"></i>
-                    </a>
-                  </li>
-                </ul>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
@@ -293,8 +254,7 @@
               <a href="https://www.tripadvisor.com/Tourism-g304061-Oradea_Bihor_County_Northwest_Romania_Transylvania-Vacations.html" target="_blank">Oradea, Bihor, România</a>
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInDown" data-delay="300">
-              <i class="fa fa-phone fa-3x"></i>
-              (0740)876.889
+              <i class="fa fa-phone fa-3x"></i><br>(0740)876.889
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
               <a href="mailto:dave460@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
