--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
               <i class="fa fa-phone fa-3x"></i><br>(0740)876.889
             </div>
             <div class="col-lg-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
-              <a href="mailto:dave460@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
-              <a href="mailto:dave460@gmail.com">e-mail me</a>
+              <a href="mailto:david@veres.me"><i class="fa fa-envelope fa-3x"></i></a>
+              <a href="mailto:david@veres.me">e-mail me</a>
             </div>
           </div>
         </div>
