--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
     <![endif]-->
   </head>
   <body>
-	  <div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'ro', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	
     <div class="loader">
+	      <div id="google_translate_element"></div>
+	  <script type="text/javascript">
+		function googleTranslateElementInit() {
+  		new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'ro', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+		}
+	  </script>
+	  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+	  </script>
       <div class="fading-line"></div>
     </div>
     <section id="home" class="page">
@@ -85,7 +89,7 @@ function googleTranslateElementInit() {
 			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
 				<h2>Who am I?</h2>
 				<div class="border"></div>
-				<p>I'm a <span id="age">unknown</span> years old Buyer from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
+				<p>I'm a <span id="age">unknown</span> years old Commodity Manager from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
 			</div>
           </div>
         </div>
@@ -98,7 +102,7 @@ function googleTranslateElementInit() {
 			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
 				<h2>What do I do?</h2>
 				<div class="border"></div>
-				<p>At the moment I am a LeadBuyer Assistant for Mechanical and Custom Parts in Connect Group România.</p>
+				<p>At the moment I am a Commodity Manger for Mechanical and Custom Parts in Connect Group România.</p>
 			</div>
           </div>
         </div>
