--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
 				<h2>Who am I?</h2>
 				<div class="border"></div>
-				<p>I'm a <span id="age">unknown</span> years old Commodity Manager from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
+				<p>I'm a <span id="age">unknown</span> years old Purchasing Specialist from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
 			</div>
           </div>
         </div>
@@ -94,7 +94,7 @@
 			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
 				<h2>What do I do?</h2>
 				<div class="border"></div>
-				<p>At the moment I am a Commodity Manger for Mechanical and Custom Parts in Connect Group România.</p>
+				<p>At the moment I'm an Advanced Purchasing Engineer for Continental Timișoara.</p>
 			</div>
           </div>
         </div>
@@ -116,9 +116,14 @@
                   <li data-target="#testimonials" data-slide-to="1" class=""></li>
                   <li data-target="#testimonials" data-slide-to="2" class=""></li>
                   <li data-target="#testimonials" data-slide-to="3" class=""></li>
+		  <li data-target="#testimonials" data-slide-to="4" class=""></li>
                 </ol>
 					<div class="carousel-inner">
 					  <div class="item active">
+						<p class="quote">Lead Buyer - <i>Mechanical components</i></p>
+						<p class="client">2016-2018 / Connect Group România</p>
+					  </div>
+					  <div class="item">
 						<p class="quote">Project Buyer - <i>I learned them all, PCB's, IC's, tranzistors and the rest</i></p>
 						<p class="client">2015-2016 / Connect Group România</p>
 					  </div>
