--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
 				<h2>Who am I?</h2>
 				<div class="border"></div>
-				<p>I'm a <span id="age">unknown</span> years old Purchasing Specialist from Oradea, Romania, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
+				<p>I'm a <span id="age">unknown</span> years old Purchasing Specialist from Oradea, Romania, currently living in Timișoara, with a passion for aviation, <br>photography, physics and astronomy among others.</p>
 			</div>
           </div>
         </div>
