--- a/report.html
+++ b/report.html
@@ -2,9 +2,9 @@
 <html lang="en"> 
   <head> 
     <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
-    <title>Title Goes Here</title> 
+    <title>Report page</title> 
   </head> 
   <body> 
-    <p>This is my web page</p> 
+    <p>Report creator goes here</p> 
   </body> 
 </html>
