--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="col-lg-12 animated hiding" data-animation="fadeInDown">
 				<h2>What do I do?</h2>
 				<div class="border"></div>
-				<p>At the moment I'm an Advanced Purchasing Engineer for Continental Timișoara.</p>
+				<p>At the moment I'm swithching carriers from Procurement to ABAP Programing.</p>
 			</div>
           </div>
         </div>
@@ -120,8 +120,12 @@
                 </ol>
 					<div class="carousel-inner">
 					  <div class="item active">
-						<p class="quote">Lead Buyer - <i>Mechanical components</i></p>
-						<p class="client">2016-2018 / Connect Group România</p>
+						<p class="quote">IPO / Commodity Buyer</i></p>
+						<p class="client">2019-2025 / PUREM Oradea</p>
+					  </div>
+					  <div class="item active">
+						<p class="quote">Advanced Purchasing Engineer</p>
+						<p class="client">2018-2019 / Continental Automotive Timisoara</p>
 					  </div>
 					  <div class="item">
 						<p class="quote">Project Buyer - <i>I learned them all, PCB's, IC's, tranzistors and the rest</i></p>
