--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<p class="quote">IPO / Commodity Buyer</i></p>
 						<p class="client">2019-2025 / PUREM Oradea</p>
 					  </div>
-					  <div class="item active">
+					  <div class="item">
 						<p class="quote">Advanced Purchasing Engineer</p>
 						<p class="client">2018-2019 / Continental Automotive Timisoara</p>
 					  </div>
